--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,16 +169,16 @@ a:hover {
 }
 
 .logo-container{
-    margin-left:16%; margin-bottom:100px; margin-top:150px;
+    margin-left:17%; 
+    margin-bottom:100px; 
+    margin-top:100px;
 }
 
 .bg-slate {
-    background-color: #3d5387;
+    background-color: #2d4e77;
     border-color: #607D8B;
     color: #fff;
 }
-
-
 
 /*image-pelayanan*/
 
@@ -231,6 +231,10 @@ a:hover {
         height: 70px;
         align-items: center;
     }
+
+    .navbar-hidden{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -241,6 +245,9 @@ a:hover {
     .navbar-brand .logo {
         height: 70px;
         align-items: center;
+    }
+    .navbar-hidden{
+        display: none;
     }
 }
 
@@ -253,17 +260,27 @@ a:hover {
         height: 70px;
         align-items: center;
     }
+    .navbar-hidden{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 480px){
 
     .logo-container{
-        margin-left:9%; margin-bottom:60px; margin-top:55px;
+        margin-left:5%; margin-bottom:60px; margin-top:200px;
     }
 
     .navbar-brand .logo {
         height: 70px;
         align-items: center;
+    }
+
+    .style-image{
+        margin-top: 50px;
+    }
+    .navbar-hidden{
+        display: none;
     }
 
 }
