--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,16 +172,37 @@ a:hover {
     transform: translate(-50%, -50%)
 }
 
+/*section normal*/
 .logo-container{
-    margin-left:17%; 
-    margin-bottom:100px; 
-    margin-top:100px;
+    margin-left: 0px;
+    margin-top:150px;
+    margin-bottom: 100px;
+}
+
+.logo-style{
+    justify-content: center;
+    display: flex;
+}
+
+.title-container{
+    justify-content: center;
 }
 
 .bg-slate {
     background-color: #2d4e77;
     border-color: #607D8B;
     color: #fff;
+}
+
+.button-small{
+    max-width: 60%;
+    justify-content: center;
+    display: flex;
+    margin-left: 20%;
+}
+
+.button-big{
+    display: none;
 }
 
 /*image-pelayanan*/
@@ -222,87 +243,244 @@ a:hover {
 }
 
 /* Media Queries */
-@media screen and (max-width: 1200px){
+@media (min-width: 992px) and (max-width: 1199.98px){
+    .logo-container{
+        margin-left: 0px;
+        margin-top:80px;
+        margin-bottom: 80px;
+    }
+    
+    .logo-style{
+        justify-content: center;
+        display: flex;
+    }
+    
+    .title-container{
+        justify-content: center;
+    }
+    
+    /*image-pelayanan*/
+    
+    .image-container{
+        text-align: center;
+    }
+    
+    .image-container-pelayanan{
+        max-width: 100%;
+        align-items: center;
+    }
 
+    .navbar-brand .logo {
+        height: 100px;
+        align-items: center;
+    }
+
+    .navbar-hidden{
+        display: none;
+    }
+
+    .button-small{
+        display: none;
+    }
+    
+    .button-big{
+        display: block;
+    }
 }
 
-@media screen and (max-width: 900px){
+@media (min-width: 767px) and (max-width: 991.98px) {
     .logo-container{
-        margin-left:25%; margin-bottom:60px; margin-top:55px;
+        margin-left: 0px;
+        margin-top:100px;
+        margin-bottom: 80px;
+    }
+    
+    .logo-style{
+        justify-content: center;
+        display: flex;
+    }
+    
+    .title-container{
+        justify-content: center;
+    }
+    
+    /*image-pelayanan*/
+    
+    .image-container{
+        text-align: center;
+    }
+    
+    .image-container-pelayanan{
+        max-width: 100%;
+        align-items: center;
+    }
+
+    .navbar-brand .logo {
+        height: 100px;
+        align-items: center;
+    }
+
+    .navbar-hidden{
+        display: none;
+    }
+
+    .button-small{
+        display: none;
+    }
+    
+    .button-big{
+        display: block;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 768px){
+
+    .content-style{
+        margin-top: -150px;
+    }
+
+    .logo-container{
+        margin-left: 0px;
+        margin-bottom: 80px;
+    }
+    
+    .logo-style{
+        justify-content: center;
+        display: flex;
+    }
+    
+    .title-container{
+        justify-content: center;
+        margin-top:150px;
+    }
+    
+    /*image-pelayanan*/
+    
+    .image-container{
+        text-align: center;
+    }
+    
+    .image-container-pelayanan{
+        max-width: 100%;
+        align-items: center;
     }
 
     .navbar-brand .logo {
         height: 70px;
+        margin-top:100px;
         align-items: center;
     }
-
     .navbar-hidden{
         display: none;
     }
+
+    .button-small{
+        display: none;
+    }
+    
+    .button-big{
+        display: block;
+    }
 }
 
-@media screen and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 575px){
+
+    .content-style{
+        margin-top: -150px;
+    }
+
     .logo-container{
-        margin-left:25%; margin-bottom:60px; margin-top:55px;
+        margin-left: 0px;
+        margin-bottom: 80px;
+    }
+    
+    .logo-style{
+        justify-content: center;
+        display: flex;
+    }
+    
+    .title-container{
+        justify-content: center;
+        margin-top:150px;
+    }
+    
+    /*image-pelayanan*/
+    
+    .image-container{
+        text-align: center;
+    }
+    
+    .image-container-pelayanan{
+        max-width: 100%;
+        align-items: center;
     }
 
     .navbar-brand .logo {
         height: 70px;
+        margin-top:100px;
         align-items: center;
     }
     .navbar-hidden{
         display: none;
     }
+
+    .button-small{
+        display: none;
+    }
+    
+    .button-big{
+        display: block;
+    }
 }
 
-@media screen and (max-width: 576px){
+@media (min-width: 320px) and (max-width: 480px){
+
+    .content-style{
+        margin-top: -150px;
+    }
+
     .logo-container{
-        margin-left:15%; margin-bottom:60px; margin-top:55px;
+        margin-left: 0px;
+        margin-bottom: 80px;
+    }
+    
+    .logo-style{
+        justify-content: center;
+        display: flex;
+    }
+    
+    .title-container{
+        justify-content: center;
+        margin-top:150px;
+    }
+    
+ 
+    
+    /*image-pelayanan*/
+    
+    .image-container{
+        text-align: center;
+    }
+    
+    .image-container-pelayanan{
+        max-width: 100%;
+        align-items: center;
     }
 
     .navbar-brand .logo {
         height: 70px;
+        margin-top:100px;
         align-items: center;
     }
     .navbar-hidden{
         display: none;
     }
-}
-
-@media screen and (max-width: 480px){
-
-    .logo-container{
-        align-items: center;
-        margin-bottom:60px; 
-        margin-top:200px;
-    }
-
-    .container-top{
-        margin-top: -20px;
-        overflow: none;
-    }
-
-    /* .content-style{
-        max-width: 100px;
-        
-    } */
-
-    .navbar-brand .logo {
-        height: 60px;
-        align-items: center;
-    }
-
-    .style-image{
-        margin-top: 0px;
-        max-height: 100%;
-    }
-
-    .video-content{
-        margin-top: 0px;
-    }
-
-    .navbar-hidden{
+    .button-small{
         display: none;
+    }
+    
+    .button-big{
+        display: block;
     }
 
 }
